[fix] CSS changes
- Fix notification area not being sticky
- Fix popover being too large on small devices by removing arrow

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,13 +4,6 @@
 @import 'bootstrap';
 @import 'bootstrap-vue/src/index.scss';
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  position: relative;
-}
-
 .bg-overlay {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4));
 }
@@ -54,5 +47,13 @@ body {
   to {
     opacity: 1;
     transform: none;
+  }
+}
+
+@include media-breakpoint-down(md) {
+  .popover {
+    & > .arrow {
+      display: none;
+    }
   }
 }
